--- a/assets/scss/default/_variables.scss
+++ b/assets/scss/default/_variables.scss
@@ -7,6 +7,8 @@
     --color-secondary: #d09d3a;
     --color-accent: #05816b;
 
+    --border-color: #005b4b21;
+
     --grey-screen: rgba(0, 0, 0, 0.108);
     --light-grey: #f4f4f4;
 
