--- a/assets/scss/elements/_cta.scss
+++ b/assets/scss/elements/_cta.scss
@@ -32,6 +32,7 @@ section.cta {
       .left-area {
         max-width: 700px;
         padding: 109px 0px 118px 106px;
+
         .title {
           font-size: 48px;
           font-weight: 400;
@@ -48,14 +49,27 @@ section.cta {
         p {
           position: relative;
           font-size: 20px;
-          // left: -2px;
-          margin-bottom: 3rem;
+          margin-bottom: 2rem;
+          padding-right: 3rem;
           color: rgba(255, 255, 255, 0.746);
           @media #{$large-mobile} {
             font-size: 16px;
           }
         }
+        .oss {
+          align-items: center;
+          justify-content: center;
+          padding-top: 5px;
 
+          .os {
+            width: 37px;
+            height: auto;
+            opacity: 0.3;
+            &.android {
+              width: 39px;
+            }
+          }
+        }
         .rts-btn {
           img {
             filter: brightness(0) saturate(100%) invert(100%) sepia(0%)
@@ -72,7 +86,32 @@ section.cta {
         position: relative;
         overflow: hidden;
         z-index: 2;
-
+        .app-box {
+          position: absolute;
+          padding: 5rem;
+        
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 12;
+          background: rgba(255, 255, 255, 0.25);
+          backdrop-filter: blur(16px);
+          border-radius: 3px;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+            rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          .stagg-app-logo {
+            width: 91px;
+            height: auto;
+            border-radius: 22px;
+            box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+              rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px,
+              rgba(0, 0, 0, 0.07) 0px 8px 16px,
+              rgba(0, 0, 0, 0.07) 0px 16px 32px,
+              rgba(0, 0, 0, 0.07) 0px 32px 64px;
+          }
+         
+        }
         .right-overlay {
           position: absolute;
           top: 0;
