--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -57,6 +57,7 @@
 
 
 /* Elements  */
+@import "elements/stacked-images";
 @import "elements/common-helper";
 @import "elements/header";
 @import "elements/nav";
