--- a/assets/scss/default/_typography.scss
+++ b/assets/scss/default/_typography.scss
@@ -329,7 +329,7 @@ p {
   font-weight: var(--p-regular);
   color: var(--color-body);
   margin: 0 0 40px;
-
+  letter-spacing: -.25px;
   @media #{$sm-layout} {
     margin: 0 0 20px;
     font-size: 16px;
